# imac2-cpp

./: .gitignore  README.md
soutien/: Guerrier.cpp  Guerrier.hpp  Mage.cpp  Mage.hpp  Makefile  Personnage.cpp  Personnage.hpp  main.cpp  output
td1/: TP1_ex1  TP1_ex1.cpp  TP1_ex2  TP1_ex2.cpp  TP1_ex3  TP1_ex3.cpp  TP1_ex4  TP1_ex4.cpp  TP1_ex5  TP1_ex5.cpp  TP1_ex6  TP1_ex6.cpp  chrono.hpp
td10/c++-tools/cmake-dependances/: CMakeLists.txt
td10/c++-tools/cmake-dependances/src/: imageStabilization.cpp
td10/c++-tools/cmake-doxygen/: CMakeLists.txt
td10/c++-tools/cmake-doxygen/doc/: CMakeLists.txt  Doxyfile-html.cmake
td10/c++-tools/cmake-doxygen/src/: VectorD.cpp  VectorD.hpp  main.cpp
td10/c++-tools/kcachegrind/: CMakeLists.txt
td10/c++-tools/kcachegrind/src/: main.cpp
td10/c++-tools/valgrind-debugger/: CMakeLists.txt
td10/c++-tools/valgrind-debugger/src/: main.cpp
td2/: main  makefile  sortie.txt
td2/include/: VectorD.hpp
td2/src/: VectorD.cpp  main.cpp
td4/: main
td4/correction/: ImageRGBU8.cpp  ImageRGBU8.hpp  Makefile  ioPPM.cpp  ioPPM.hpp  main.cpp  ultraman.ppm
td4/include/: ImageRGBu8.hpp
td4/src/: ImageRGBu8.cpp  main.cpp
td4bis/: ImageRGBu8.cpp  ImageRGBu8.hpp  Makefile  image  image.ppm  ioPPM.cpp  main.cpp
td4ter/: Carre.cpp  Carre.hpp  Cercle.cpp  Cercle.hpp  Ellipse.cpp  Ellipse.hpp  Figure.cpp  Figure.hpp  Makefile  Rectangle.cpp  Rectangle.hpp  main.cpp  td4_output
td5/: Filter.cpp  Filter.hpp  Filters.cpp  Filters.hpp  ImageRGBu8.cpp  ImageRGBu8.hpp  Makefile  Mean.cpp  Mean.hpp  RemoveChannel.cpp  RemoveChannel.hpp  Sobel.cpp  Sobel.hpp  Threshold.cpp  Threshold.hpp  bruit.ppm  image  ioPPM.hpp  main.cpp  output.ppm  questions.txt  test1.ppm  test_ex3.ppm  test_ex4.ppm  test_ex5.ppm  test_ex5bis.ppm
td6/: Error.cpp  Error.hpp  Makefile  exo1  main.cpp  main.cpp.save
td7/: AjoutSiPair.cpp  AjoutSiPair.hpp  Majuscule.cpp  Majuscule.hpp  Makefile  main.cpp  output
td8/: Error.hpp  Makefile  Point3D.hpp  Tableau.hpp  main.cpp  output
